# Project-Bootstrap-Generator

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  TEMPLATES.md  TROUBLESHOOTING.md
docs/ADR/: 0001-use-jinja2-for-templates.md  0002-yaml-config-format.md
src/bootstrap/: cli.py  generator.py  validators.py
src/bootstrap/templates/node_cli/: index.js.j2  package.json.j2
src/bootstrap/templates/python_cli/: README.md.j2  pyproject.toml.j2
src/bootstrap/templates/python_cli/{{ project_name }}/: cli.py
src/bootstrap/templates/python_web/: README.md.j2  main.py.j2
src/config/: default_projects.yaml
tests/: test_cli.py  test_generator.py  test_validators.py
